--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,9 +37,9 @@ jobs:
       # 4. 并行部署前端和后端
       - name: Deploy Frontend
         run: |
-          # 清理目录
+          # 删除整个目录并重新创建（避免权限冲突）
           ssh -i ~/.ssh/id_ed25519 root@139.224.207.84 \
-            "mkdir -p /www/wwwroot/aiaiai && rm -rf /www/wwwroot/aiaiai/*"
+            "rm -rf /www/wwwroot/aiaiai && mkdir -p /www/wwwroot/aiaiai"
 
           # 上传前端文件
           scp -i ~/.ssh/id_ed25519 -r drawing_information/frontend/dist/* \
