--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,10 @@ jobs:
           scp -i ~/.ssh/id_ed25519 -r drawing_information/backend/* \
             root@139.224.207.84:/root/drawing_information/backend/
 
+          # 上传 models 目录（后端依赖）
+          scp -i ~/.ssh/id_ed25519 -r drawing_information/models \
+            root@139.224.207.84:/root/drawing_information/
+
           # 安装依赖和重启服务
           ssh -i ~/.ssh/id_ed25519 root@139.224.207.84 << 'ENDSSH'
             cd /root/drawing_information/backend
