--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,26 +65,8 @@ jobs:
             root@139.224.207.84:/root/drawing_information/
 
           # 更新 systemd 服务配置
-          ssh -i ~/.ssh/id_ed25519 root@139.224.207.84 "systemctl stop drawing-ocr"
-
-          ssh -i ~/.ssh/id_ed25519 root@139.224.207.84 "cat > /etc/systemd/system/drawing-ocr.service <<'SERVICEEOF'
-[Unit]
-Description=Drawing OCR Service
-After=network.target
-
-[Service]
-Type=simple
-User=root
-WorkingDirectory=/root/drawing_information
-Environment=\"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\"
-ExecStart=/usr/bin/python3 -m uvicorn backend.main:app --host 0.0.0.0 --port 8000
-Restart=always
-RestartSec=10
-
-[Install]
-WantedBy=multi-user.target
-SERVICEEOF
-"
+          scp -i ~/.ssh/id_ed25519 drawing_information/drawing-ocr.service \
+            root@139.224.207.84:/etc/systemd/system/drawing-ocr.service
 
           ssh -i ~/.ssh/id_ed25519 root@139.224.207.84 "systemctl daemon-reload"
 
